syntax = "proto3";

package auth;

option go_package = "github.com/EwvwGeN/authService;authProto";

// REFISTER
message RegisterRequest {
    string email = 1;
    string password = 2;
}

message RegisterResponse {
    string user_id = 1;
}

// Resend
message ResendRequest {
    string email = 1;
}

message ResendResponse {
    bool sended = 1;
}

// LOGIN
message LoginRequest {
    string email = 1;
    string password = 2;
    string app_id = 3;
}

message LoginResponse {
    string token = 1;
}

// ADMIN
message IsAdminRequest {
    string user_id = 1;
}

message IsAdminResponse {
    bool is_admin = 1;
}

service Auth {
    rpc Register (RegisterRequest) returns (RegisterResponse);
    rpc ResendMail (ResendRequest) returns (ResendResponse);
    rpc Login (LoginRequest) returns (LoginResponse);
    rpc IsAdmin (IsAdminRequest) returns (IsAdminResponse);
}

